# mcp-file-edit

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  demo_enhanced_features.py  git_operations.py  mcp_file_server.py  patch_debugging_guide.md  patch_functionality.py  prepare_release.py  project_directory_examples.py  pyproject.toml  server.py  setup.py  test_patch.py  test_project_directory.py  test_simple.py  test_ssh_transfer.py  update_claude_config.py
examples/: __init__.py  code_analysis_examples.py  enhanced_features_examples.py  example_usage.py  git_operations_examples.py  patch_examples.py  ssh_transfer_examples.py
tests/: __init__.py  test_code_analysis.py  test_enhanced.py  test_mcp_server.py
